adjust line-height for the paragraph tags within .scroll, and center .analysis-heading and stop it from wrapping.

--- a/404cafeclub/css/cyanobacteria.css
+++ b/404cafeclub/css/cyanobacteria.css
@@ -323,6 +323,10 @@ a:visited {
         margin-bottom: 25px;
 }
 
+.scroll p {
+        line-height: .75em;
+}
+
 .align {
 	display: flex;
 	justify-content: center;
@@ -359,7 +363,10 @@ hr {
 
 .analysis-heading {
         font-weight: bold;
+        text-align: center;
+        text-wrap: nowrap;
 }
+
 @media only screen and (max-width: 773px) {
         .scroll{ max-height: 500px;}
 }
